--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header::before {
   	align-items: center;
   	flex-direction: column;
   	background-attachment: fixed;
-  
+	height: 400px;
   	overflow: hidden;
   	
 }
